# Open-System-Dynamics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: open_sys_evo.ipynb
src/open_sys_dynamics/ladder_algebra/: operators.py
src/open_sys_dynamics/utils/: benchmarking.py
tests/: test_operators.py
